# TinyNeuralNetwork

./: CMakeLists.txt  CMakeLists_8txt.html  README.md  annotated.html  annotated_dup.js  classLayer-members.html  classLayer.html  classLayer.js  classMLP-members.html  classMLP.html  classMLP.js  classNeuron-members.html  classNeuron.html  classNeuron.js  classVariable-members.html  classVariable.html  classVariable.js  classes.html  dir_000001_000003.html  dir_000001_000004.html  dir_000002_000005.html  dir_000003_000001.html  dir_000003_000002.html  dir_000004_000005.html  dir_08ebf401352d0c333d3a643fc2ed36cf.html  dir_0c9ea08de28bb1cd5197f7d034c44c7e.html  dir_0c9ea08de28bb1cd5197f7d034c44c7e.js  dir_0c9ea08de28bb1cd5197f7d034c44c7e_dep.dot  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.dot  dir_8b1b1d3ff28e273b117e2ca277e8d05f.html  dir_8b1b1d3ff28e273b117e2ca277e8d05f.js  dir_8b1b1d3ff28e273b117e2ca277e8d05f_dep.dot  dir_a4c1bc47733d52c12dcbe7406a6f5ba1.html  dir_a4c1bc47733d52c12dcbe7406a6f5ba1.js  dir_a4c1bc47733d52c12dcbe7406a6f5ba1_dep.dot  dir_dd920bd76ff7422f03265981cd757b41.html  dir_dd920bd76ff7422f03265981cd757b41.js  dir_f372b5d0e0b042a6c6b947f9ebe48d59.html  (+60 more)
app/: CMakeLists.txt  example_use.cc  main.cc  simple_mlp.cc
docs/: Doxyfile  intro.md
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  functions_0.js  functions_1.js  functions_10.js  functions_11.js  functions_12.js  functions_13.js  functions_14.js  functions_2.js  functions_3.js  (+16 more)
src/: CMakeLists.txt
src/layer/: CMakeLists.txt  layer.cc  layer.h
src/loss/: CMakeLists.txt  loss.cc  loss.h
src/my_lib/: my_lib.cc  my_lib.h
src/neural_network/: CMakeLists.txt  mlp.cc  mlp.h  my_lib2.cc  my_lib2.h  variable.cc  variable.h
src/neuron/: CMakeLists.txt  neuron.cc  neuron.h
src/variable/: CMakeLists.txt  variable.cc  variable.h
tests/: CMakeLists.txt  main.cc  test_active_function.cc  test_computational_graph.cc  test_constant_variable.cc  test_factorial.cc  test_layer.cc  test_loss.cc  test_math_operation.cc  test_mlp.cc  test_neuron.cc  test_print_hello_world.cc  test_variable.cc  test_variable_constant.cc  test_variable_variable.cc
